--- a/_posts/2014-07-20-Handling-constant-type-unsupported-in-type-providers.html
+++ b/_posts/2014-07-20-Handling-constant-type-unsupported-in-type-providers.html
@@ -11,7 +11,7 @@ however if you try and pass a none native type to the quotation you will receive
 </tr>
 </table>
 
-<p>There is a stack-overflow post here which has an example and a good explanation of the reasons why. A typical work around is to use each 
+<p>There is a stack-overflow post <a href="http://stackoverflow.com/questions/10161437/type-provider-providing-me-with-an-unsuported-constant-type-system-double-er">here</a> which has an example and a good explanation of the reasons why. A typical work around is to use each 
 field from a record and pass it to a function call in the quotation as an array or as individual parameters. Either way this can end up being quite painful.</p>
 
 <p>So how can we work around this. Well, what we need to do is build a new instance of the object we are trying to pass to the quotation within the quotation 
