Hopefully generating with titles

--- a/_posts/2013-04-29-Option-Operators.html
+++ b/_posts/2013-04-29-Option-Operators.html
@@ -1,7 +1,8 @@
 ---
 layout: page
-title: Option Operators
+title: 2013-04-29-Option-Operators
 ---
+
 <p>We often have to represent the absence of data within a collection of values. In C# the default type to-go to is an Nullable, F# 3.0 introduced the Microsoft.FSharp.Linq.NullableOperators module to help with comparisons and arithmetic over this type.</p>
 
 <p>The Nullable type can still be somewhat tiresome to use in F# though as it can lead to adding lots of type constraints for example</p>
@@ -157,7 +158,6 @@ set of operators.</p>
 </td>
 </tr>
 </table>
-
 
 <div class="tip" id="fs1">namespace System</div>
 <div class="tip" id="fs2">type NullableSeq&lt;&#39;a (requires default constructor and value type and &#39;a :&gt; ValueType)&gt; = seq&lt;Nullable&lt;&#39;a&gt;&gt;<br /><br />Full name: 2013-04-29-Option-Operators.NullableSeq&lt;_&gt;</div>
