--- a/_posts/2013-02-23-FSharp-end-to-end.html
+++ b/_posts/2013-02-23-FSharp-end-to-end.html
@@ -41,17 +41,10 @@ libraries we can use.</p>
 
 <p>Ok this might seem like an obvious one, just write F#, but I thought I'd use this as an opportunity to highlight some libraries that I find useful</p>
 
-<table class="pre"><tr><td class="lines"><pre class="fssnip">
-<span class="l">1: </span>
-<span class="l">2: </span>
-</pre>
-</td>
-<td class="snippet"><pre class="fssnip">
-<span class="o">*</span> [<span class="i">FSharpx</span>](<span class="s">&quot;</span><span class="s">http</span><span class="s">:</span><span class="s">/</span><span class="s">/</span><span class="s">fsharp</span><span class="s">.</span><span class="s">github</span><span class="s">.</span><span class="s">com</span><span class="s">/</span><span class="s">fsharpx</span><span class="s">/</span><span class="s">&quot;</span>) <span class="o">-</span> <span class="i">Contains</span> <span class="i">lots</span> <span class="k">of</span> <span class="i">extensions</span> <span class="k">to</span> <span class="i">the</span> <span class="i">F#</span> <span class="i">core</span> <span class="i">modules</span>, <span class="i">many</span> <span class="i">useful</span> <span class="i">data</span> <span class="i">structures</span>, <span class="i">commonly</span> <span class="i">used</span> <span class="i">monads</span>, <span class="i">validation</span>, <span class="o">&lt;</span><span class="i">a</span> <span class="i">href</span><span class="o">=</span><span class="s">&quot;</span><span class="s">http</span><span class="s">:</span><span class="s">/</span><span class="s">/</span><span class="s">msdn</span><span class="s">.</span><span class="s">microsoft</span><span class="s">.</span><span class="s">com</span><span class="s">/</span><span class="s">en</span><span class="s">-</span><span class="s">gb</span><span class="s">/</span><span class="s">library</span><span class="s">/</span><span class="s">hh156509</span><span class="s">.</span><span class="s">aspx</span><span class="s">&quot;</span> <span class="i">target</span><span class="o">=</span><span class="s">&quot;</span><span class="s">_blank</span><span class="s">&quot;</span><span class="o">&gt;</span><span class="k">type</span> <span class="i">providers</span><span class="o">&lt;/</span><span class="i">a</span><span class="o">&gt;</span>, <span onmouseout="hideTip(event, 'fs1', 1)" onmouseover="showTip(event, 'fs1', 1)" class="i">async</span> <span class="i">extensions</span> <span class="i">etc</span><span class="o">.</span><span class="o">&lt;/</span><span class="i">li</span><span class="o">&gt;</span>
-<span class="o">*</span> [<span class="i">FSharp</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs2', 2)" onmouseover="showTip(event, 'fs2', 2)" class="i">Data</span>](<span class="s">&quot;</span><span class="s">http</span><span class="s">:</span><span class="s">/</span><span class="s">/</span><span class="s">tpetricek</span><span class="s">.</span><span class="s">github</span><span class="s">.</span><span class="s">com</span><span class="s">/</span><span class="s">FSharp</span><span class="s">.</span><span class="s">Data</span><span class="s">&quot;</span>) <span class="o">-</span> <span class="i">Contains</span> <span class="i">implementation</span> <span class="k">of</span> <span class="i">various</span> <span class="k">type</span> <span class="i">providers</span> <span class="i">such</span> <span class="k">as</span> <span class="i">CSV</span>, <span class="i">XML</span> <span class="k">and</span> <span class="i">JSON</span> <span class="k">and</span> <span class="i">I&#39;m</span> <span class="i">sure</span> <span class="k">as</span> <span class="i">the</span> <span class="i">library</span> <span class="i">matures</span> <span class="i">we</span> <span class="i">will</span> <span class="i">see</span> <span class="i">a</span> <span class="i">lot</span> <span class="i">more</span> <span class="i">implementations</span> <span class="k">to</span> <span class="i">connect</span> <span class="k">to</span> <span class="i">wide</span> <span class="i">variety</span> <span class="k">of</span> <span class="i">data</span> <span class="i">sources</span><span class="o">.</span><span class="o">&lt;/</span><span class="i">li</span><span class="o">&gt;</span></pre>
-</td>
-</tr>
-</table>
+<ul>
+<li><a href="" title="http://fsharp.github.com/fsharpx/">FSharpx</a> - Contains lots of extensions to the F# core modules, many useful data structures, commonly used monads, validation, <a href="http://msdn.microsoft.com/en-gb/library/hh156509.aspx" target="_blank">type providers</a>, async extensions etc.</li></li>
+<li><a href="" title="http://tpetricek.github.com/FSharp.Data">FSharp.Data</a> - Contains implementation of various type providers such as CSV, XML and JSON and I'm sure as the library matures we will see a lot more implementations to connect to wide variety of data sources.</li></li>
+</ul>
 
 <h3>Build and Deployment</h3>
 
@@ -153,9 +146,9 @@ that helps things along here.</p>
 </pre>
 </td>
 <td class="snippet"><pre class="fssnip">
-<span class="k">open</span> <span onmouseout="hideTip(event, 'fs3', 3)" onmouseover="showTip(event, 'fs3', 3)" class="i">System</span>
-<span class="k">open</span> <span onmouseout="hideTip(event, 'fs3', 4)" onmouseover="showTip(event, 'fs3', 4)" class="i">System</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs4', 5)" onmouseover="showTip(event, 'fs4', 5)" class="i">Windows</span>
-<span class="k">open</span> <span onmouseout="hideTip(event, 'fs3', 6)" onmouseover="showTip(event, 'fs3', 6)" class="i">System</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs4', 7)" onmouseover="showTip(event, 'fs4', 7)" class="i">Windows</span><span class="o">.</span><span class="i">Controls</span>
+<span class="k">open</span> <span onmouseout="hideTip(event, 'fs1', 1)" onmouseover="showTip(event, 'fs1', 1)" class="i">System</span>
+<span class="k">open</span> <span onmouseout="hideTip(event, 'fs1', 2)" onmouseover="showTip(event, 'fs1', 2)" class="i">System</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs2', 3)" onmouseover="showTip(event, 'fs2', 3)" class="i">Windows</span>
+<span class="k">open</span> <span onmouseout="hideTip(event, 'fs1', 4)" onmouseover="showTip(event, 'fs1', 4)" class="i">System</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs2', 5)" onmouseover="showTip(event, 'fs2', 5)" class="i">Windows</span><span class="o">.</span><span class="i">Controls</span>
 <span class="k">open</span> <span class="i">FSharpx</span>
 
 <span class="k">type</span> <span class="i">MainWindow</span> <span class="o">=</span> <span class="i">XAML</span><span class="o">&lt;</span><span class="s">&quot;</span><span class="s">libs</span><span class="s">/</span><span class="s">MainWindow</span><span class="s">.</span><span class="s">xaml</span><span class="s">&quot;</span><span class="o">&gt;</span>
@@ -164,7 +157,7 @@ that helps things along here.</p>
     <span class="k">let</span> <span class="i">window</span> <span class="o">=</span> <span class="i">MainWindow</span>()
     <span class="i">window</span><span class="o">.</span><span class="i">myButton</span><span class="o">.</span><span class="i">Click</span><span class="o">.</span><span class="i">Add</span>(<span class="k">fun</span> _ <span class="k">-&gt;</span>
         <span class="i">MessageBox</span><span class="o">.</span><span class="i">Show</span>(<span class="s">&quot;</span><span class="s">Hello</span><span class="s"> </span><span class="s">world</span><span class="s">!</span><span class="s">&quot;</span>)
-        <span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs5', 8)" onmouseover="showTip(event, 'fs5', 8)" class="i">ignore</span>)
+        <span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs3', 6)" onmouseover="showTip(event, 'fs3', 6)" class="i">ignore</span>)
     <span class="i">window</span><span class="o">.</span><span class="i">Root</span>
 
 [&lt;<span class="i">STAThread</span>&gt;]
@@ -206,7 +199,7 @@ using a build target something like the following example, Incidentally this is 
 </pre>
 </td>
 <td class="snippet"><pre class="fssnip">
-<span class="k">open</span> <span onmouseout="hideTip(event, 'fs3', 9)" onmouseover="showTip(event, 'fs3', 9)" class="i">System</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs6', 10)" onmouseover="showTip(event, 'fs6', 10)" class="i">IO</span>
+<span class="k">open</span> <span onmouseout="hideTip(event, 'fs1', 7)" onmouseover="showTip(event, 'fs1', 7)" class="i">System</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs4', 8)" onmouseover="showTip(event, 'fs4', 8)" class="i">IO</span>
 <span class="k">open</span> <span class="i">FSharp</span><span class="o">.</span><span class="i">Literate</span>
 
 <span class="i">Target</span> <span class="s">&quot;</span><span class="s">Docs</span><span class="s">&quot;</span> (<span class="k">fun</span> _ <span class="k">-&gt;</span> 
@@ -229,9 +222,7 @@ to take from the above is the fact that all of your logic whether it is for buil
 written in a type safe way using the various libraries and F# feature spoken about above.</p>
 
 
-<div class="tip" id="fs1">val async : AsyncBuilder<br /><br />Full name: Microsoft.FSharp.Core.ExtraTopLevelOperators.async</div>
-<div class="tip" id="fs2">namespace Microsoft.FSharp.Data</div>
-<div class="tip" id="fs3">namespace System</div>
-<div class="tip" id="fs4">namespace System.Windows</div>
-<div class="tip" id="fs5">val ignore : value:&#39;T -&gt; unit<br /><br />Full name: Microsoft.FSharp.Core.Operators.ignore</div>
-<div class="tip" id="fs6">namespace System.IO</div>
+<div class="tip" id="fs1">namespace System</div>
+<div class="tip" id="fs2">namespace System.Windows</div>
+<div class="tip" id="fs3">val ignore : value:&#39;T -&gt; unit<br /><br />Full name: Microsoft.FSharp.Core.Operators.ignore</div>
+<div class="tip" id="fs4">namespace System.IO</div>
