Added FSharp e to e post

--- a/_posts/2013-02-23-FSharp-end-to-end.html
+++ b/_posts/2013-02-23-FSharp-end-to-end.html
@@ -29,7 +29,10 @@ You can read more about this <a href="http://www.simontylercousins.net/journal/2
 <li>Documentation -> F#</li>
 </ul>
 
-<p>Note the stack is 'almost' completely F# (we actually could have made this completely F# see below). Maybe I'm biased but I think that this is a huge benefit for&amp;nbsp;maintainability I only need to have my F# brain switched on and I can change any part of the application. Sure I have to learn a few libraries, but the playfulness offered by the REPL here makes testing and experimenting easy; this is especially true when it comes writing build and deployment scripts, which I normally find quiet difficult to test.</p>
+<p>Note the stack is 'almost' completely F# (we actually could have made this completely F# see below). Maybe I'm biased but I think that this is a huge benefit for 
+maintainability I only need to have my F# brain switched on and I can change any part of the application. Sure I have to learn a few 
+libraries, but the playfulness offered by the REPL here makes testing and experimenting easy; this is especially true when it comes writing 
+build and deployment scripts, which I normally find quiet difficult to test.</p>
 
 <h2>Full stack F#</h2>
 
