--- a/_posts/2013-04-29-FSharp-and-raven-db.html
+++ b/_posts/2013-04-29-FSharp-and-raven-db.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: FSharp and Raven DB
+title: F# and Raven DB
 ---
 
 <p>Ok so I have blogged about these to before. Previously, F# didn't have brilliant support for Linq. F# Expressions couldn't <code>easily</code> be 
