--- a/_posts/2014-11-04-Blogging-with-FSharp.html
+++ b/_posts/2014-11-04-Blogging-with-FSharp.html
@@ -63,7 +63,7 @@ layout: page
 title: your post title
 ----</pre></td></tr></table>
 
-<p>As of writing this change is not part of the FSharp.Formatting mainline, but there is a <a href="https://github.com/tpetricek/FSharp.Formatting/pull/224">PR</a>. However if you deceide that you like this approach, or just want to play, I have created a github repository <a href="https://github.com/colinbull/FsBlog/commits?author=colinbull">FsBlog</a> that is this exact blog (minus content).</p>
+<p>As of writing this change is not part of the FSharp.Formatting mainline, but there is a <a href="https://github.com/tpetricek/FSharp.Formatting/pull/224">PR</a>. However if you deceide that you like this approach, or just want to play, I have created a github repository <a href="https://github.com/colinbull/FsBlog">FsBlog</a> that is this exact blog (minus content).</p>
 
 <p>One more thing is if you are developing in Visual Studio then I highly recommend the <a href="https://visualstudiogallery.msdn.microsoft.com/2fc5ccff-f424-4721-ac3f-bb9d4ca7de03">Elucidate Extension</a>, so you can visualize your literate scripts as you work on them.</p>
 
