Adding more to the cricket post

--- a/_posts/2014-11-06-Introducing-Cricket.html
+++ b/_posts/2014-11-06-Introducing-Cricket.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Introducing Cricket.
+title: Introducing Cricket (formally FSharp.Actor)
 ---
 
 <p>Over the last few years, I have been quite taken by the actor model of computing. Although not a silver bullet it does tend to make concurrent programming orders of magnitude easier to reason about. If you have never heard of Actors then an actor as defined by <a href="http://en.wikipedia.org/wiki/Actor_model">wikipedia</a> is as follows</p>
@@ -89,12 +89,10 @@ title: Introducing Cricket.
 
 <table class="pre"><tr><td class="lines"><pre class="fssnip">
 <span class="l">1: </span>
-<span class="l">2: </span>
 </pre>
 </td>
 <td class="snippet"><pre class="fssnip">
-<span class="i">echo</span> <span class="o">&lt;--</span> <span class="s">&quot;</span><span class="s">Hello</span><span class="s">,</span><span class="s"> </span><span class="s">from</span><span class="s"> </span><span class="s">Cricket</span><span class="s">&quot;</span>
-    </pre>
+<span class="i">echo</span> <span class="o">&lt;--</span> <span class="s">&quot;</span><span class="s">Hello</span><span class="s">,</span><span class="s"> </span><span class="s">from</span><span class="s"> </span><span class="s">Cricket</span><span class="s">&quot;</span></pre>
 </td>
 </tr>
 </table>
@@ -111,7 +109,71 @@ title: Introducing Cricket.
 </tr>
 </table>
 
-<p>There is much more in Cricket, than this basic blog post covers. If your interested browse the links at the top of this post for more information.</p>
+<p>From these basic begining we can build entire systems using actors. The systems can be spread over multiple machines, and as long as the underlying message transport supports it different data-centres. To create make our simply echo actor distributed. We don't have to change the implementation of the actor. All we have to do is enable remoting on the actor host.</p>
+
+<table class="pre"><tr><td class="lines"><pre class="fssnip">
+<span class="l">1: </span>
+<span class="l">2: </span>
+<span class="l">3: </span>
+<span class="l">4: </span>
+<span class="l">5: </span>
+<span class="l">6: </span>
+<span class="l">7: </span>
+<span class="l">8: </span>
+</pre>
+</td>
+<td class="snippet"><pre class="fssnip">
+<span class="c">//Node1 host configuration</span>
+<span class="i">ActorHost</span><span class="o">.</span><span class="i">Start</span>()
+         <span class="o">.</span><span class="i">SubscribeEvents</span>(<span class="k">fun</span> (<span class="i">evnt</span><span class="o">:</span><span class="i">ActorEvent</span>) <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs1', 2)" onmouseover="showTip(event, 'fs1', 2)" class="i">printfn</span> <span class="s">&quot;</span><span class="s">%</span><span class="s">A</span><span class="s">&quot;</span> <span class="i">evnt</span>)
+         <span class="o">.</span><span class="i">EnableRemoting</span>(
+                   [<span class="k">new</span> <span class="i">TCPTransport</span>(<span class="i">TcpConfig</span><span class="o">.</span><span class="i">Default</span>(<span class="i">IPEndPoint</span><span class="o">.</span><span class="i">Create</span>(<span class="n">12002</span>)))],
+                   <span class="k">new</span> <span class="i">BinarySerializer</span>(),
+                   <span class="k">new</span> <span class="i">TcpActorRegistryTransport</span>(<span class="i">TcpConfig</span><span class="o">.</span><span class="i">Default</span>(<span class="i">IPEndPoint</span><span class="o">.</span><span class="i">Create</span>(<span class="n">12003</span>))),
+                   <span class="k">new</span> <span class="i">UdpActorRegistryDiscovery</span>(<span class="i">UdpConfig</span><span class="o">.</span><span class="i">Default</span>(), <span class="n">1000</span>))</pre>
+</td>
+</tr>
+</table>
+
+<p>All we have done is enchance the ActorHost with a collection of message transports, a serializer, a registry transport and a way for the actors to discover each other. Similar setif we used the same setup on another node.</p>
+
+<table class="pre"><tr><td class="lines"><pre class="fssnip">
+<span class="l">1: </span>
+<span class="l">2: </span>
+<span class="l">3: </span>
+<span class="l">4: </span>
+<span class="l">5: </span>
+<span class="l">6: </span>
+<span class="l">7: </span>
+<span class="l">8: </span>
+</pre>
+</td>
+<td class="snippet"><pre class="fssnip">
+<span class="c">//Node2 host configuration</span>
+<span class="i">ActorHost</span><span class="o">.</span><span class="i">Start</span>()
+         <span class="o">.</span><span class="i">SubscribeEvents</span>(<span class="k">fun</span> (<span class="i">evnt</span><span class="o">:</span><span class="i">ActorEvent</span>) <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs1', 3)" onmouseover="showTip(event, 'fs1', 3)" class="i">printfn</span> <span class="s">&quot;</span><span class="s">%</span><span class="s">A</span><span class="s">&quot;</span> <span class="i">evnt</span>)
+         <span class="o">.</span><span class="i">EnableRemoting</span>(
+                   [<span class="k">new</span> <span class="i">TCPTransport</span>(<span class="i">TcpConfig</span><span class="o">.</span><span class="i">Default</span>(<span class="i">IPEndPoint</span><span class="o">.</span><span class="i">Create</span>(<span class="n">12004</span>)))],
+                   <span class="k">new</span> <span class="i">BinarySerializer</span>(),
+                   <span class="k">new</span> <span class="i">TcpActorRegistryTransport</span>(<span class="i">TcpConfig</span><span class="o">.</span><span class="i">Default</span>(<span class="i">IPEndPoint</span><span class="o">.</span><span class="i">Create</span>(<span class="n">12005</span>))),
+                   <span class="k">new</span> <span class="i">UdpActorRegistryDiscovery</span>(<span class="i">UdpConfig</span><span class="o">.</span><span class="i">Default</span>(), <span class="n">1000</span>))</pre>
+</td>
+</tr>
+</table>
+
+<p>then we can on node 2 resolve any actors on node 1, using the example above. Alternatively if I had 10 nodes but wanted to resolve the <code>echo</code> actor on node 9, I could do something like the following</p>
+
+<table class="pre"><tr><td class="lines"><pre class="fssnip">
+<span class="l">1: </span>
+</pre>
+</td>
+<td class="snippet"><pre class="fssnip">
+<span class="s">&quot;</span><span class="s">node9</span><span class="s">@</span><span class="s">*</span><span class="s">/</span><span class="s">echo</span><span class="s">&quot;</span> <span class="o">&lt;--</span> <span class="s">&quot;</span><span class="s">Hello</span><span class="s">,</span><span class="s"> </span><span class="s">from</span><span class="s"> </span><span class="s">Cricket</span><span class="s">&quot;</span></pre>
+</td>
+</tr>
+</table>
+
+<p>This would then resolve the actor on <code>node9</code>. If we had kept the original query which was simply <code>echo</code> then this would resolve any actor named <code>echo</code> all of the nodes participating in the group. For more details on remoting and a link to an example see <a href="http://fsprojects.github.io/Cricket/remoting.html">here</a></p>
 
 
 <div class="tip" id="fs1">val printfn : format:Printf.TextWriterFormat&lt;&#39;T&gt; -&gt; &#39;T<br /><br />Full name: Microsoft.FSharp.Core.ExtraTopLevelOperators.printfn</div>
