--- a/_posts/2014-11-06-Introducing-Cricket.html
+++ b/_posts/2014-11-06-Introducing-Cricket.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Introducing Cricket (formally FSharp.Actor)
+title: Introducing Cricket (formerly FSharp.Actor)
 ---
 
 <p>Over the last few years, I have been quite taken by the actor model of computing. Although not a silver bullet it does tend to make concurrent programming orders of magnitude easier to reason about. If you have never heard of Actors then an actor as defined by <a href="http://en.wikipedia.org/wiki/Actor_model">wikipedia</a> is as follows</p>
@@ -21,7 +21,7 @@ title: Introducing Cricket (formally FSharp.Actor)
 
 <h2><a name="Introducing-Cricket" class="anchor" href="#Introducing-Cricket">Introducing Cricket</a></h2>
 
-<p><a href="http://github.com/fsprojects/Cricket">Cricket</a>, formally FSharp.Actor, is yet another actor framework. Built entirely in F#, Cricket is a lightweight alternative to Akka et. al. To this end it is not as feature rich as these out of the box, but all of the core requirements like location transpancy, remoting, supervisors, metrics and tracing. Other things like failure detection and clustering are in the pipeline it is just a question of time.</p>
+<p><a href="http://github.com/fsprojects/Cricket">Cricket</a>, formerly FSharp.Actor, is yet another actor framework. Built entirely in F#, Cricket is a lightweight alternative to Akka et. al. To this end it is not as feature rich as these out of the box, but all of the core requirements like location transpancy, remoting, supervisors, metrics and tracing. Other things like failure detection and clustering are in the pipeline it is just a question of time.</p>
 
 <p>Some key links for Cricket:</p>
 
