--- a/_posts/2014-11-06-Introducing-Cricket.html
+++ b/_posts/2014-11-06-Introducing-Cricket.html
@@ -109,7 +109,7 @@ title: Introducing Cricket (formerly FSharp.Actor)
 </tr>
 </table>
 
-<p>From these basic begining we can build entire systems using actors. The systems can be spread over multiple machines, and as long as the underlying message transport supports it different data-centres. To create make our simply echo actor distributed. We don't have to change the implementation of the actor. All we have to do is enable remoting on the actor host.</p>
+<p>From these basic beginings we can build entire systems using actors. These systems can be spread over multiple machines and as long as the underlying message transport supports it different data-centres. To make our echo actor distributed, we don't have to change the implementation of the actor. All we have to do is enable remoting on the actor host.</p>
 
 <table class="pre"><tr><td class="lines"><pre class="fssnip">
 <span class="l">1: </span>
