Adding tag link

--- a/_posts/2015-03-24-Why-I-Like-FSharp.html
+++ b/_posts/2015-03-24-Why-I-Like-FSharp.html
@@ -238,7 +238,7 @@ title: Why I like F#.
 <table class="pre"><tr><td><pre><code>110.647214 Hours - To Accepted answer
 </code></pre></td></tr></table>
 
-<p>And actually we see 110 hours. Which actually, isn't as good as I was expecting, but then again, the F# compiler has been open sourced for quiet some time now. Typically this has mean't questions are directed to <a href="https://github.com/Microsoft/visualfsharp">fsharp github repository</a> previously on codeplex, or people simply take a look at the code and figure it out for themselves. Or ask on twitter with the #fsharp tag, and wait for the plethora of responses to come in from the help and very active community members.</p>
+<p>And actually we see 110 hours. Which actually, isn't as good as I was expecting, but then again, the F# compiler has been open sourced for quiet some time now. Typically this has mean't questions are directed to <a href="https://github.com/Microsoft/visualfsharp">fsharp github repository</a> previously on codeplex, or people simply take a look at the code and figure it out for themselves. Or ask on twitter with the <a href="https://twitter.com/search?q=%23fsharp&amp;src=typd">#fsharp</a> tag, and wait for the plethora of responses to come in from the help and very active community members.</p>
 
 <p>In fact as I write this I'm wondering whether the comment</p>
 
