--- a/_posts/2015-03-24-Why-I-Like-FSharp.html
+++ b/_posts/2015-03-24-Why-I-Like-FSharp.html
@@ -247,7 +247,7 @@ title: Why I like F#.
 </tr>
 </table>
 
-<p>This gives</p>
+<p>This gives the following results.</p>
 
 <table class="pre"><tr><td><pre><code>[|(2008, 2345.916019, 1.900555556); (2009, 333.4175912, 0.4058333333);
   (2010, 96.91721817, 0.5219444444); (2011, 48.4008104, 0.5786111111);
@@ -271,7 +271,7 @@ title: Why I like F#.
 </tr>
 </table>
 
-<p><img src="images/chart1.png" alt="" /></p>
+<p><img src="_posts/images/chart1.png" alt="" /></p>
 
 <p>And actually we see that in 2008 when FSharp first appeared it took a long time for questions to get closed. This is the year F# was introduced and I suspect there was only a handful of people outside of Microsoft Research that actually where able to answer these questions. 
 However as time has progressed we see an exponential improvement it the time for questions to get answered, which typically bottoms out with an average of 25 hours and a median of about 30 mins. This is clearly a sign of a responsive community, that is indeed growing. Whats more, 
