--- a/_posts/2014-11-04-Blogging-with-FSharp.html
+++ b/_posts/2014-11-04-Blogging-with-FSharp.html
@@ -3,7 +3,7 @@ layout: page
 title: Blogging with F# on GitHub Pages
 ---
 
-<h2>Introduction</h2>
+<h2><a name="Introduction" class="anchor" href="#Introduction">Introduction</a></h2>
 
 <p>Recently I decided I wanted to move my blog from Wordpress, to a far lighter-weight platform. The platform I chose to host my new blog on was <a href="http://pages.github.com">Github Pages</a>. Basically if you have a github account you get a free pages repository where you can host a blog. You simply create a repository with a name that matches the format <code>{username}.github.io</code> and that's basically it. You can now create a <code>index.htm</code> page place it into your repository and away you go.</p>
 
@@ -11,7 +11,7 @@ title: Blogging with F# on GitHub Pages
 
 <p>To add a post you simply create a <code>*.md</code> or <code>*.html</code> and save it to the posts directory, push your changes.</p>
 
-<h2>Leveraging <a href="http://tpetricek.github.io/FSharp.Formatting">FSharp.Formatting</a></h2>
+<h2><a name="Leveraging-FSharp-Formatting" class="anchor" href="#Leveraging-FSharp-Formatting">Leveraging <a href="http://tpetricek.github.io/FSharp.Formatting">FSharp.Formatting</a></a></h2>
 
 <p>FSharp Formatting is a library that enables a form of literate programming, where you can embed markdown directly into a <code>*.fsx</code> script. Then by running a simple command line tool or a script you can convert the script into a HTML or Latex document. When your chosen out put is html you get tool-tips when you hover over terms in your code, exactly like you would in an IDE. For example,</p>
 
