Adding React lazy views

--- a/_posts/2016-11-29-HtmlProvider-Canopy.html
+++ b/_posts/2016-11-29-HtmlProvider-Canopy.html
@@ -82,7 +82,7 @@ title: Html Provider + Canopy.
 </td>
 <td class="snippet"><pre class="fssnip">
 <span class="k">let</span> <span class="i">toolPath</span> <span class="o">=</span> 
-    <span class="i">Path</span><span class="o">.</span><span class="i">GetFullPath</span>(<span class="k">__SOURCE_DIRECTORY__</span> <span class="o">+</span> <span class="s">&quot;</span><span class="s">/</span><span class="s">Tools</span><span class="s">/</span><span class="s">phantomjs</span><span class="s">/</span><span class="s">bin</span><span class="s">&quot;</span>)
+    <span class="i">Path</span><span class="o">.</span><span class="i">GetFullPath</span>(<span class="k">__SOURCE_DIRECTORY__</span> <span class="o">+</span> <span class="s">&quot;</span><span class="s">/</span><span class="s">libs</span><span class="s">/</span><span class="s">Tools</span><span class="s">/</span><span class="s">phantomjs</span><span class="s">/</span><span class="s">bin</span><span class="s">&quot;</span>)
 
 <span class="k">let</span> <span class="i">writePage</span> <span class="i">path</span> <span class="i">content</span> <span class="o">=</span> 
     <span class="k">if</span> <span class="i">File</span><span class="o">.</span><span class="i">Exists</span>(<span class="i">path</span>) <span class="k">then</span> <span class="i">File</span><span class="o">.</span><span class="i">Delete</span> <span class="i">path</span>
