Adding React lazy views

--- a/_posts/2018-02-08-Lazy-Elmish-React.html
+++ b/_posts/2018-02-08-Lazy-Elmish-React.html
@@ -1,12 +1,15 @@
-// ---
-// layout: page
-// title: Lazy Elmish React.
-// ---
+---
+layout: page
+title: Lazy Elmish React.
+---
 
 
-<div class="tip" id="fs1">namespace Fable</div>
-<div class="tip" id="fs2">namespace Fable.Core</div>
-<div class="tip" id="fs3"></div>
-<div class="tip" id="fs4">namespace Elmish.React</div>
-<div class="tip" id="fs5">module Common<br /><br />from Elmish.React</div>
-<div class="tip" id="fs6">val defaultof&lt;&#39;T&gt; : &#39;T<br /><br />Full name: Microsoft.FSharp.Core.Operators.Unchecked.defaultof</div>
+<div class="tip" id="fs1">namespace Microsoft.FSharp.Core</div>
+<div class="tip" id="fs2">type obj = System.Object<br /><br />Full name: Microsoft.FSharp.Core.obj</div>
+<div class="tip" id="fs3">Multiple items<br />val string : value:&#39;T -&gt; string<br /><br />Full name: Microsoft.FSharp.Core.Operators.string<br /><br />--------------------<br />type string = System.String<br /><br />Full name: Microsoft.FSharp.Core.string</div>
+<div class="tip" id="fs4">namespace Microsoft.FSharp.Data</div>
+<div class="tip" id="fs5">type &#39;T list = List&lt;&#39;T&gt;<br /><br />Full name: Microsoft.FSharp.Collections.list&lt;_&gt;</div>
+<div class="tip" id="fs6">module Unchecked<br /><br />from Microsoft.FSharp.Core.Operators</div>
+<div class="tip" id="fs7">val defaultof&lt;&#39;T&gt; : &#39;T<br /><br />Full name: Microsoft.FSharp.Core.Operators.Unchecked.defaultof</div>
+<div class="tip" id="fs8">val unbox : value:obj -&gt; &#39;T<br /><br />Full name: Microsoft.FSharp.Core.Operators.unbox</div>
+<div class="tip" id="fs9">val ignore : value:&#39;T -&gt; unit<br /><br />Full name: Microsoft.FSharp.Core.Operators.ignore</div>
